--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -17,8 +17,7 @@
             android:layout_height="40dp"
             android:contentDescription="@string/logo"
             android:scaleType="centerInside"
-            android:src="@drawable/github_logo"
-            app:tint="@color/white" />
+            android:src="@drawable/github_logo" />
 
     </com.google.android.material.appbar.MaterialToolbar>
 
