--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -25,26 +25,39 @@
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/followingFragment"
-        android:name="com.onirutla.githubsuser.view.detail.following.FollowingFragment"
+        android:name="com.onirutla.githubsuser.view.following.FollowingFragment"
         android:label="fragment_following"
-        tools:layout="@layout/fragment_following" />
+        tools:layout="@layout/fragment_following" >
+        <argument
+            android:name="username"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/followerFragment"
-        android:name="com.onirutla.githubsuser.view.detail.follower.FollowerFragment"
+        android:name="com.onirutla.githubsuser.view.follower.FollowerFragment"
         android:label="fragment_follower"
-        tools:layout="@layout/fragment_follower" />
+        tools:layout="@layout/fragment_follower" >
+        <argument
+            android:name="username"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.onirutla.githubsuser.view.detail.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" >
-        <action
-            android:id="@+id/action_detailFragment_self"
-            app:destination="@id/detailFragment" />
         <argument
             android:name="username"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_detailFragment_to_followingFragment"
+            app:destination="@id/followingFragment" />
+        <action
+            android:id="@+id/action_detailFragment_to_followerFragment"
+            app:destination="@id/followerFragment" />
     </fragment>
     <fragment
         android:id="@+id/setting_fragment"
